@@ -2253,8 +2253,22 @@ int
 evbuffer_cb_set_flags(struct evbuffer *buffer,
 		      struct evbuffer_cb_entry *cb, ev_uint32_t flags)
 {
+	/* the user isn't allowed to mess with these. */
+	flags &= ~EVBUFFER_CB_INTERNAL_FLAGS;
         EVBUFFER_LOCK(buffer, EVTHREAD_WRITE);
-	cb->flags = (cb->flags & EVBUFFER_CB_INTERNAL_FLAGS) | flags;
+	cb->flags |= flags;
+        EVBUFFER_UNLOCK(buffer, EVTHREAD_WRITE);
+	return 0;
+}
+
+int
+evbuffer_cb_clear_flags(struct evbuffer *buffer,
+		      struct evbuffer_cb_entry *cb, ev_uint32_t flags)
+{
+	/* the user isn't allowed to mess with these. */
+	flags &= ~EVBUFFER_CB_INTERNAL_FLAGS;
+        EVBUFFER_LOCK(buffer, EVTHREAD_WRITE);
+	cb->flags &= ~flags;
         EVBUFFER_UNLOCK(buffer, EVTHREAD_WRITE);
 	return 0;
 }
