@@ -26,6 +26,8 @@ Changes in 2.0.2-alpha:
  o Make bufferevent_setfd() return an error code if the operation is not successful.
  o Shave 22 bytes off struct event on 32-bit platforms by shrinking and re-ordering fields.  The savings on 64-bit platforms is likely higher.
  o Cap the maximum number of priorities at 256.
+ o Change the semantics of evbuffer_cb_set_flags() to be set-flag only; add a new evbuffer_cb_clear_flags() to remove set flags.
+
 
 Changes in 2.0.1-alpha:
  o free minheap on event_base_free(); from Christopher Layne
